[EDIT] 전체적인 sh 정리